force-app/main/default/objects/Staff_Quarters_Room__c/Staff_Quarters_Room__c.object-meta.xml
<CustomObject>
    <label>Staff Quarters Room</label>
    <nameField>
        <label>Staff Quarters Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staff Quarters Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>