force-app/main/default/objects/Staff_Quarters_Room__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <label>Floor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ground Floor</fullName>
            </value>
            <value>
                <fullName>First Floor</fullName>
            </value>
            <value>
                <fullName>Second Floor</fullName>
            </value>
            <value>
                <fullName>Third Floor</fullName>
            </value>
            <value>
                <fullName>Fourth Floor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>